# gemx

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gemx/: __init__.py  cli.py  client.py  errors.py  formats.py
src/jimi/: __init__.py  cli.py  client.py  errors.py  formats.py
tests/: test_cli.py  test_client.py  test_formats.py
tests/scripts/: TEST_GEMINI.md  gemini_console.js  gemini_console_prompt.js
