[project]
name = "gemx"
version = "0.1.0"
description = "Drive the Gemini web UI from Python via Playwright"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ra0x3" }]
maintainers = [{ name = "ra0x3" }]
keywords = ["gemini", "playwright", "automation", "llm", "browser", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "playwright>=1.49",
]

[project.urls]
Homepage = "https://github.com/ra0x3/gemx"
Repository = "https://github.com/ra0x3/gemx"
Issues = "https://github.com/ra0x3/gemx/issues"

[project.scripts]
gemx = "gemx.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "ruff>=0.8",
    "pylint>=3.3",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemx"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["A003"]

[tool.ruff.lint.isort]
known-first-party = ["gemx"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/gemx"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.12"
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
